--- a/templates/calendario/calendario_talleres.html
+++ b/templates/calendario/calendario_talleres.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="container-fluid">
   <div class="d-flex justify-content-between align-items-center mb-3">
-    <h3 class="fw-bold text-dark">🗓️ Calendario de Talleres</h3>
+    <h3 class="fw-bold text-dark"><img src="{% static 'img/calendario.gif' %}" alt="icono planes"> Calendario de Talleres</h3>
     <span class="badge px-3 py-2 text-dark border border-dark bg-warning">
       Inscribir Solo Planes Caballero - Rey • Cupos Limitados
     </span>
