--- a/templates/planes/lista_planes.html
+++ b/templates/planes/lista_planes.html
@@ -6,7 +6,7 @@
 {% block content %}
 <div class="container mt-3">
 <div class="d-flex justify-content-between align-items-center mb-3">
-<h3 class="fw-bold">📋 Lista de Planes</h3>
+<h3 class="fw-bold"><img src="{% static 'img/planes.png' %}" alt="icono planes"> Lista de Planes</h3>
 <a href="{% url 'crear_plan' %}" class="btn btn-dark text-warning fw-bold">+ Nuevo Plan</a>
 </div>
 
