--- a/templates/canchas/canchas_list.html
+++ b/templates/canchas/canchas_list.html
@@ -6,7 +6,7 @@
 {% block content %}
 <div class="container mt-3">
 <div class="d-flex justify-content-between align-items-center mb-3">
-<h3 class="fw-bold">⚽ Canchas</h3>
+<h3 class="fw-bold"><img src="{% static 'img/pelota.png' %}" alt="icono canchas"> Canchas</h3>
 <a href="{% url 'cancha_crear' %}" class="btn btn-dark text-warning fw-bold">+ Nueva Cancha</a>
 </div>
 
