--- a/templates/pagos/lista_pagos.html
+++ b/templates/pagos/lista_pagos.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="container mt-3">
 <div class="d-flex justify-content-between align-items-center mb-3">
-<h3 class="fw-bold">💳 Lista de Pagos</h3>
+<h3 class="fw-bold"><img src="{% static 'img/tarjeta48.png' %}" alt="icono de pagos"> Lista de Pagos</h3>
 <a href="{% url 'crear_pago' %}" class="btn btn-dark text-warning fw-bold">+ Nuevo Pago</a>
 </div>
 
