--- a/templates/socios/crear_socio.html
+++ b/templates/socios/crear_socio.html
@@ -9,7 +9,7 @@
 
 {% block content %}
 <div class="container mt-4">
-  <h3 class="fw-bold mb-4">🧾 Registrar Nuevo Socio</h3>
+  <h3 class="fw-bold mb-4"> <img src="{% static 'img/pergamino.png' %}" alt="icono de pergamino"> Registrar Nuevo Socio</h3>
 
   <form method="POST" class="card p-4 shadow-sm">
     {% csrf_token %}
