--- a/templates/socios/lista_socios.html
+++ b/templates/socios/lista_socios.html
@@ -4,14 +4,37 @@
 {% block title %}Lista de Socios{% endblock %}
 
 {% block content %}
+
 <div class="container mt-3">
   <div class="d-flex justify-content-between align-items-center mb-3">
-    <h3 class="fw-bold">👥 Lista de Socios</h3>
+    <h3 class="fw-bold"><img src="{% static 'img/socios.png' %}" alt="icono socios"> Lista de Socios</h3>
     <a href="{% url 'crear_socio' %}" class="btn btn-dark text-warning fw-bold">+ Nuevo Socio</a>
   </div>
 
+  <!-- 🔍 Barra de búsqueda -->
+<div class="input-group mb-3">
+
+  <span class="input-group-text">
+    <img src="{% static 'img/lupa.gif' %}" alt="icono de pergamino">
+  </span>
+
+  <input
+    type="text"
+    id="buscador"
+    class="form-control"
+    placeholder="Buscar por nombre o apellido..."
+  >
+      <button
+      class="btn btn-outline-secondary"
+      type="button"
+      id="btnLimpiar"
+      title="Limpiar búsqueda"
+    >❌</button> 
+</div>
+
+
   <div class="table-responsive">
-    <table class="table table-striped align-middle shadow-sm">
+    <table class="table table-striped align-middle shadow-sm" id="tablaSocios">
       <thead class="table-dark">
         <tr>
           <th>RUT</th>
@@ -54,7 +77,8 @@
 </div>
 {% endblock %}
 
+
 {% block extra_js %}
-<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-<script src="{% static 'js/socios/lista_socios.js' %}"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script src="{% static 'js/socios/lista_socios.js' %}"></script>
 {% endblock %}
