--- a/templates/core/login.html
+++ b/templates/core/login.html
@@ -12,6 +12,7 @@
 
 <body >
     <div class="login-card">
+        <img src="{% static 'img/login96.gif' %}" alt="icono gimlogin" class="d-block mx-auto mb-3">
         <h3 class="text-center mb-4 text-dark"> Gym of Thrones</h3>
 
         <form method="POST" novalidate>
