--- a/templates/users/form_usuario.html
+++ b/templates/users/form_usuario.html
@@ -47,7 +47,7 @@
             {% endfor %}
           {% else %}
             <option value="superadmin">Super Administrador</option>
-            <option value="admin">Administrador</option>
+            <option value="admin">Admin</option>
             <option value="profesor">Profesor</option>
           {% endif %}
         </select>
