--- a/templates/core/base_dashboard.html
+++ b/templates/core/base_dashboard.html
@@ -22,7 +22,7 @@
 
     <ul>
       {% if request.user.rol == 'superadmin' %}
-        <li><a href="{% url 'dashboard_superadmin' %}"><i class="ph ph-house"></i><span>inicio</span></a></li>
+        <li><a href="{% url 'dashboard_superadmin' %}"><i class="ph ph-house"></i><span>Inicio</span></a></li>
         <li><a href="{% url 'lista_usuarios' %}"><i class="ph ph-user"></i><span>Usuarios</span></a></li>
         <li><a href="{% url 'lista_socios' %}"><i class="ph ph-users"></i><span>Socios</span></a></li>
         <li><a href="{% url 'lista_planes' %}"><i class="ph ph-clipboard-text"></i><span>Planes</span></a></li>
@@ -41,7 +41,7 @@
         <li><a href="{% url 'dashboard_reportes' %}"><i class="ph ph-chart-line"></i><span>Reportes</span></a></li>
 
       {% elif request.user.rol == 'admin' %}
-        <li><a href="{% url 'dashboard_admin' %}"><i class="ph ph-house"></i><span>inicio</span></a></li>
+        <li><a href="{% url 'dashboard_admin' %}"><i class="ph ph-house"></i><span>Inicio</span></a></li>
         <li><a href="{% url 'lista_socios' %}"><i class="ph ph-users"></i><span>Socios</span></a></li>
         <li><a href="{% url 'lista_planes' %}"><i class="ph ph-clipboard-text"></i><span>Planes</span></a></li>
         <li><a href="{% url 'lista_pagos' %}"><i class="ph ph-credit-card"></i><span>Pagos</span></a></li>
@@ -57,14 +57,14 @@
         </li>
 
       {% elif request.user.rol == 'profesor' %}
-        <li><a href="{% url 'dashboard_profesor' %}"><i class="ph ph-house"></i><span>inicio</span></a></li>
+        <li><a href="{% url 'dashboard_profesor' %}"><i class="ph ph-house"></i><span>Inicio</span></a></li>
         <li><a href="{% url 'calendario_canchas' %}"><i class="ph ph-soccer-ball"></i>Reserva Canchas</a></li>
         <li><a href="{% url 'calendario_talleres' %}"><i class="ph ph-person-simple-walk"></i><span>Mis Talleres</span></a></li>
         <li><a href="{% url 'mis_alumnos' %}"><i class="ph ph-users"></i><span>Mis Alumnos</span></a></li>
         <li><a href="{% url 'lista_rutinas' %}"><i class="ph ph-barbell"></i><span>Rutinas</span></a></li>
 
       {% elif request.user.rol == 'socio' %}
-        <li><a href="{% url 'dashboard_socio' %}"><i class="ph ph-house"></i><span>inicio</span></a></li>
+        <li><a href="{% url 'dashboard_socio' %}"><i class="ph ph-house"></i><span>Inicio</span></a></li>
         <li><a href="{% url 'pagos_socio' %}"><i class="ph ph-credit-card"></i><span>Pagos</span></a></li>
         <li><a href="{% url 'calendario_canchas' %}"><i class="ph ph-calendar"></i><span>Mis Reservas</span></a></li>
         <li><a href="{% url 'calendario_talleres' %}"><i class="ph ph-person-simple-walk"></i><span>Mis Talleres</span></a></li>
